# geoMapping-test

./: README.md  pyproject.toml
data/san_fran_data/: PVS_23_v2_addr_06075.dbf  PVS_23_v2_allnames_06075.dbf  PVS_23_v2_areafaces_06075.dbf  PVS_23_v2_arealm_06075.dbf  PVS_23_v2_arealm_06075.shp  PVS_23_v2_arealm_06075.shx  PVS_23_v2_bg_06075.dbf  PVS_23_v2_bg_06075.shp  PVS_23_v2_bg_06075.shx  PVS_23_v2_cbsa_06075.dbf  PVS_23_v2_cbsa_06075.shp  PVS_23_v2_ccd_06075.dbf  PVS_23_v2_ccd_06075.shp  PVS_23_v2_ccd_06075.shx  PVS_23_v2_cd_06075.dbf  PVS_23_v2_cd_06075.shp  PVS_23_v2_cd_06075.shx  PVS_23_v2_cdp_06075.dbf  PVS_23_v2_county_06075.dbf  PVS_23_v2_county_06075.shp  PVS_23_v2_curtracts_06075.dbf  PVS_23_v2_curtracts_06075.shp  PVS_23_v2_curtracts_06075.shx  PVS_23_v2_edges_06075.shp  PVS_23_v2_edges_06075.shx  PVS_23_v2_elsd_06075.dbf  PVS_23_v2_faces_06075.dbf  PVS_23_v2_faces_06075.shp  PVS_23_v2_faces_06075.shx  PVS_23_v2_hydrofaces_06075.dbf  PVS_23_v2_offset_06075.dbf  PVS_23_v2_offset_06075.shp  PVS_23_v2_offset_06075.shx  PVS_23_v2_place_06075.dbf  PVS_23_v2_pointlm_06075.dbf  PVS_23_v2_pointlm_06075.shp  PVS_23_v2_pointlm_06075.shx  PVS_23_v2_puma2020_06075.dbf  PVS_23_v2_puma2020_06075.shp  PVS_23_v2_puma2020_06075.shx  (+24 more)
data/supervisory_district_data/: geo_export_184b7eec-1746-4e9d-8d73-acdce90a99f1.dbf
src/: extract-coordinates.py  geomapper.py  manipulate-shapefile.py
